# semi_synth

./: CMakeLists.txt  README
src/: processing.pde
src/IO/: AlsaOutput.cpp  AlsaOutput.h  ArduinoInput.cpp  ArduinoInput.h  ArduinoInput.ino  AudioOutput.h  CLIInput.cpp  CLIInput.h  CMakeLists.txt  ImageOutput.h  ImageOutputUDP.cpp  ImageOutputUDP.h  InputCLI.cpp  InputCLI.h  InputSource.h  KeyboardInput.cpp  KeyboardInput.h  MidiInput.cpp  MidiInput.h  MockInputCLI.cpp  MockInputCLI.h  OutputSource.h  SerialPortReader.cpp  SerialPortReader.h  SocketImageOutput.h  main.ino
src/IO/test/: CMakeLists.txt  main.cpp
src/RenderEngine/: AudioRenderer.cpp  AudioRenderer.h  CMakeLists.txt  ImageRenderer.cpp  ImageRenderer.h  RenderEngine.cpp  RenderEngine.h  RenderEngineFactory.cpp  RenderEngineFactory.h  Transport.cpp  Transport.h
src/SignalSource/: CMakeLists.txt  Channel.cpp  Channel.h  Mixer.cpp  Mixer.h  Signal.cpp  Signal.h  SignalSource.h
src/SignalSource/tests/: CMakeLists.txt  ChannelTest.cpp  MixerTest.cpp  SignalTest.cpp
src/frontend/: CMakeLists.txt  main.cpp  midi_frontend.cpp
src/processing/: processing.pde
src/test/: CMakeLists.txt  main.cpp
